Regression: Unlinking an Orphan Action Crashes Blender #102797

Closed
opened 2022-11-26 23:39:22 +01:00 by Diego Verger · 9 comments

System Information
Operating system: Linux-5.15.0-53-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.5.0, 3.2
Doesn't crash in 3.1
Crashes after b4a2096415

Short description of error
There is a crash when you unlink an orphan action.
This also happens if you have an unused action saved as fake user, and then unlink the orphan when you reopen the file.

Exact steps for others to reproduce the error

  1. Switch to Action Editor
  2. Create a New Action for the cube
  3. Remove the action
  4. Switch to Orphan Data in Outliner
  5. Unlink the Action
    First four steps included in file
    tmp-action-track.blend
**System Information** Operating system: Linux-5.15.0-53-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.5.0, 3.2 Doesn't crash in 3.1 Crashes after b4a2096415 **Short description of error** There is a crash when you unlink an orphan action. This also happens if you have an unused action saved as fake user, and then unlink the orphan when you reopen the file. **Exact steps for others to reproduce the error** 1. Switch to Action Editor 2. Create a New Action for the cube 3. Remove the action 4. Switch to Orphan Data in Outliner 5. Unlink the Action First four steps included in file [tmp-action-track.blend](https://archive.blender.org/developer/F13974669/tmp-action-track.blend)
Author

Added subscriber: @Diego3D

Added subscriber: @Diego3D
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Unlinking an Orphan Action Crashes Blender to Regression: Unlinking an Orphan Action Crashes Blender 2022-11-28 06:40:09 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Crashes after b4a2096415
cc @lichtwerk :)

Crashes after b4a2096415 cc @lichtwerk :)
Philipp Oeser self-assigned this 2022-11-28 06:45:14 +01:00
Member

Will check

Will check

This issue was referenced by a86f32d219

This issue was referenced by a86f32d219a5ba0745307d0a4a009b854dcdba99

This issue was referenced by e97443478e

This issue was referenced by e97443478e328e20c718d7a20b7acef65c50e142
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Core project 2023-02-09 15:43:10 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102797
No description provided.